# Ally

./: .env.example  .gitignore  Makefile  README.md  package.json  pyproject.toml  railway.toml
backend/: __init__.py  conversations.py  database.py  extraction.py  importer.py  llm_client.py  main.py  profile_store.py  prompt_builder.py  retrieval.py
frontend/: index.html
tests/: test_profile_store.py  test_prompt_builder.py
