[project]
name = "allyai"
version = "0.1.0"
description = "A local-first AI assistant with persistent memory, semantic retrieval, and conversation management."
authors = [
    { name = "Vadi", email = "ishaanvadi@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0,<0.137.0",
    "uvicorn[standard]>=0.30.0,<0.43.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "groq>=0.13.0,<2.0.0",
    "chromadb>=0.5.0,<2.0.0",
    "sentence-transformers>=3.0.0,<6.0.0",
    "beautifulsoup4>=4.12.0,<5.0.0",
    "httpx>=0.27.0,<0.29.0"
]

[tool.poetry]
packages = [{ include = "backend" }]

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0.0,<10.0.0"
pytest-asyncio = ">=0.24.0,<2.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
